Copyright (c) 2016, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.1.0
    - Code cleanup
    - More documentation
    - Vim and jEdit editor modes

1.1.1
Bug fix and feature add revision. Many bugs fixed and much code cleaned up.
Documentation improved.
	
Changes to commands:
	- DO now has -undo to allow decremental looping
	- IF now has -! to invert the sense of the logical test
	- monitor
		- now takes an as400 instance instead of credentials
		- now takes worklib ~@{libname} for it working library on the server		
	- RETURN command (new) leaves a FUNC or defun
	- tn5250 and session commands (new) allow a screen-scraping telnet 5250
	- tuple now takes -istuplename to test for validity of tuple name
	
New examples:
	- connect5250.ublu
	- describe_object.ublu
	
1.1.2
Changes to commands:
	- const command added
	- cs command added
	- updates to db command
	- file command added
	- record command added
	- sock command added
	- trace command added
	- server command now allows execution of a "canned" program rather
	  than simple direct access to the Ublu interpreter.
	- multiple server instances now allowed.  
	- string -uchar now can take a string of hexvals instead of only one
	- removed -from from commandcall and parse arguments better
	- programcall works better
	- added as400 -setaspgrp
	- added -byte to num command
	- list command supports object arrays and -toarray
	- more dash-commands for as400 command
	
New examples:
	- dbexample.ublu
	- ifsstuff.ublu
	- and some in the examples/test directory

Miscellaneous:
	- Deprecate providing system/userid/password as arguments to most
	  commands (use as400 object created by as400 command instead)
	- Javadoc cleaned up
	- SmapiHelper javadoc cleanup
	- Ublu JEdit mode (ublu.xml)
		- Fixed digits problem
		- Added RETURN as keyword
		- More and better documentation
	- Made it simpler to add MSSQL support in if user desires it.